fix(modal): align with the guidelines

--- a/packages/theme/src/theme/_modals.scss
+++ b/packages/theme/src/theme/_modals.scss
@@ -6,31 +6,38 @@
 }
 
 .modal {
-
+	&-content {
+		display: flex;
+		flex-direction: column;
+	}
 	&-header {
 		border-top-left-radius: $border-radius-base;
 		border-top-right-radius: $border-radius-base;
 		background-color: $modal-header-bg;
+		border-color: $concrete;
 
 		.modal-title {
-			font-weight: bold;
+			font-weight: 400;
+			font-size: 16px;
 			color: $modal-header-color;
-			text-align: center;
+
 		}
 
 		.close {
-			color: $modal-header-color;
+			color: $dove-gray;
 			opacity: 1;
 		}
 	}
 
 	&-body {
 		flex-grow: 1;
+		overflow-y: auto;
+		background-color: $wild-sand;
 	}
 
 	&-footer {
+		border-color: $concrete;
 		flex-shrink: 0;
-		border-top: none;
 	}
 
 }
